# SoundWave

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile.gdbserver  README.md  SoundWave_TZ_final.docx  docker-compose.override.prod.yml  docker-compose.override.yml  docker-compose.overrideeee.yml  docker-compose.yml  opencollection.yml
.github/workflows/: deploy.yml  tests.yml
backend/: CMakeLists.txt  logger.py
backend/authService/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  run.sh  (+1 more)
backend/commentService/: .clangd  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md
backend/commentService/.devcontainer/: devcontainer.json
backend/commentService/configs/: config_vars.yaml  static_config.yaml
backend/commentService/src/: main.cpp
backend/commentService/src/handlers/: CommentGet.cpp  CommentGet.hpp  CommentPost.cpp  CommentPost.hpp
backend/commentService/src/models/: Comment.hpp
backend/commentService/src/repositories/: CommentRepository.cpp  CommentRepository.hpp
backend/commentService/src/services/: CommentService.cpp  CommentService.hpp
backend/commentService/tests/: conftest.py  test_mongo.py
backend/cryptoPaymentService/: CMakeLists.txt  Dockerfile
backend/cryptoPaymentService/config/app/: config.json  config.json.template
backend/cryptoPaymentService/src/: main.cpp
backend/cryptoPaymentService/src/api/v1.0/controllers/: CustomerWalletsController.cpp  CustomerWalletsController.h  TransactionsController.cpp  TransactionsController.h
backend/cryptoPaymentService/src/dao/: DAO.h
backend/cryptoPaymentService/src/dto/requests/: CustomerWalletRequestTo.h  TransactionRequestTo.h
backend/cryptoPaymentService/src/dto/responses/: CustomerWalletResponseTo.h  TransactionResponseTo.h
backend/cryptoPaymentService/src/exceptions/: DatabaseError.h  DatabaseException.h
backend/cryptoPaymentService/src/mapping/: CustomerWalletsMapper.h  TransactionsMapper.h
backend/cryptoPaymentService/src/middleware/: AuthCheckMiddleware.h
backend/cryptoPaymentService/src/models/: CustomerWallets.cc  CustomerWallets.h  Transactions.cc  Transactions.h  model.json
backend/cryptoPaymentService/src/services/: CustomerWalletsService.cpp  CustomerWalletsService.h  TransactionsService.cpp  TransactionsService.h
backend/cryptoPaymentService/src/storage/database/: CustomerWalletsRepoditory.cpp  CustomerWalletsRepoditory.h  CustomerWalletsRepository.cpp  CustomerWalletsRepository.h  IDatabaseRepository.h  TransactionsRepository.cpp  TransactionsRepository.h
backend/soundsGenService/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  doc.md  docker-compose.yml
backend/soundsGenService/.devcontainer/: devcontainer.json
backend/soundsGenService/configs/: config_vars.yaml  static_config.yaml
backend/soundsGenService/docs/: doc.md
backend/soundsGenService/src/: main.cpp
backend/soundsGenService/src/handlers/: AddSoundHandler.cpp  AddSoundHandler.hpp  GenerateHandler.cpp  GenerateHandler.hpp  InfoHandler.cpp  InfoHandler.hpp  StatusHandler.cpp  StatusHandler.hpp
backend/soundsGenService/src/models/: GeneratedSoundInfo.hpp
backend/soundsGenService/src/repositories/: GenerateRepository.cpp  GenerateRepository.hpp
backend/soundsGenService/src/services/: GenerateService.cpp  GenerateService.hpp
backend/soundsGenService/tests/: conftest.py
backend/soundsGenService/userver-gen-package/: gen.py
backend/soundsGenService/userver-gen-package/templates/: Handler.cpp  Handler.hpp  Service.cpp  Service.hpp
backend/soundsStorageService/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
backend/soundsStorageService/config/app/: config.json  config.json.template
backend/soundsStorageService/config/database/: dev.properties
backend/soundsStorageService/database/: init.sh  init.sql
backend/soundsStorageService/database/migrations/: liquibase.properties
backend/soundsStorageService/database/migrations/changelog/: db.changelog-master.xml
backend/soundsStorageService/src/: main.cpp
backend/soundsStorageService/src/api/v1.0/controllers/: ProductsController.cc  ProductsController.h  SoundsController.cc  SoundsController.h  TagsController.cc  TagsController.h
backend/soundsStorageService/src/dto/requests/: ProductRequestTo.h  SaleRequestTo.h  SoundRequestTo.h  TagRequestTo.h
backend/soundsStorageService/src/dto/responses/: ProductResponseTo.h  SaleResponseTo.h  SoundResponseTo.h  TagResponseTo.h
backend/soundsStorageService/src/exceptions/: GlobalHandler.h
backend/soundsStorageService/src/mapping/: ProductMapper.h  SaleMapper.h  SoundMapper.h  TagMapper.h
backend/soundsStorageService/src/middleware/: AuthCheckMiddleware.h  ExceptonHandlerMiddleware.h  GoogleAuthCheckMiddleware.h  JWTAuthCheckFilter.h  JWTAuthCheckMiddleware.h  PaymentCheckMiddleware.h
backend/soundsStorageService/src/models/: Databasechangelog.cc  Databasechangelog.h  Databasechangeloglock.cc  Databasechangeloglock.h  ProductTags.cc  ProductTags.h  Products.cc  Products.h  Sales.cc  Sales.h  Sounds.cc  Sounds.h  Tags.cc  Tags.h  model.json
backend/soundsStorageService/src/services/: ProductService.cpp  ProductService.h  SaleService.cpp  SaleService.h  SoundDataService.cpp  SoundDataService.h  SoundService.cpp  SoundService.h  TagService.cpp  TagService.h
backend/soundsStorageService/src/storage/database/: IDatabaseRepository.h  ProductRepository.cpp  ProductRepository.h  ProductTagRepository.cpp  ProductTagRepository.h  SaleRepository.cpp  SaleRepository.h  SoundRepository.cpp  SoundRepository.h  TagRepository.cpp  TagRepository.h
backend/soundsStorageService/src/storage/filesystem/: SoundDataRepository.cpp  SoundDataRepository.h
database/: README.md  install.sh  uninstall.sh
pgadmin/: servers.json
scripts/: copy_debug_binaries_from_docker.sh
soundwave/: .env.example
tests/: bruno.json  test-health.yml  test_api.py  tests.py
(+275 files in other folders)
